Fix some overflows in snippet storage dialog

--- a/repl/src/main/resources/webroot/styles.css
+++ b/repl/src/main/resources/webroot/styles.css
@@ -145,10 +145,15 @@ html, body, .full-height {
     max-height: 0.9wh;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
 
     /** Separator between the two panes */
     border-left: 1px solid #dee2e6;
     padding: 0.5em;
+}
+
+#snippet-preview pre { 
+    overflow: auto;
 }
 
 #snippet-preview pre {
